[gd_scene load_steps=29 format=2]

[ext_resource path="res://Sprites/jetflipdummy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ShootyPlane.gd" type="Script" id=2]
[ext_resource path="res://Sprites/muzzleflash.png" type="Texture" id=3]
[ext_resource path="res://Sprites/muzzleflashlight.png" type="Texture" id=4]
[ext_resource path="res://Sounds/shoot.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/hit.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/jet.wav" type="AudioStream" id=7]
[ext_resource path="res://Scenes/MissileLock.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/missilelockdummy.png" type="Texture" id=9]
[ext_resource path="res://Other Resources/VapourTrail.tres" type="Material" id=10]
[ext_resource path="res://Sprites/pointers.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 82, 43, 41 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 43, 41, 43, 41 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 0, 41, 43, 41 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 43, 0, 43, 41 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 43, 41 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 43, 41 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 43, 0, 43, 41 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 41, 43, 41 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 43, 41, 43, 41 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 82, 43, 41 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "leftFlip",
"speed": 12.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "rightFlip",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 5, 21.5 )

[sub_resource type="Gradient" id=28]
colors = PoolColorArray( 0.278431, 0.278431, 0.278431, 0.576471, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=29]
gradient = SubResource( 28 )

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 0.463636 ), 0.0, 1.21129, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=30]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 80.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 42.0
initial_velocity_random = 0.5
angular_velocity = 400.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 20.0
scale_random = 1.0
scale_curve = SubResource( 16 )
color_ramp = SubResource( 29 )

[node name="ShootyPlane" type="RigidBody2D" groups=["Planes", "Targets"]]
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 3 )
frames = SubResource( 22 )
animation = "leftFlip"
frame = 4
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.500002, 1.90735e-06 )
rotation = 1.5708
shape = SubResource( 31 )

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 7, 0 )
texture = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="MuzzleFlash"]
texture = ExtResource( 4 )
texture_scale = 5.0
color = Color( 1, 0.533333, 0.0784314, 1 )
shadow_enabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -20, -5, -19, -5, -14, 0, -6, -1, -2, -4, 5, -4, 9, -1, 13, 1, 22, 2, 22, 3, 10, 5, -18, 5, -18, 4, -21, 4, -21, 0, -19, 0, -19, -1, -20, -1 )

[node name="MissileLauncher" type="Node2D" parent="."]
position = Vector2( 0, 12 )

[node name="VapourTrail" type="Particles2D" parent="."]
position = Vector2( -21, 2 )
emitting = false
amount = 800
lifetime = 10.0
local_coords = false
process_material = ExtResource( 10 )

[node name="Smoke" type="Particles2D" parent="."]
position = Vector2( -21, 1 )
emitting = false
amount = 1000
lifetime = 5.0
local_coords = false
process_material = SubResource( 30 )

[node name="MissileTargeter" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 2000 )

[node name="MissileLockTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="MissileLock" parent="." instance=ExtResource( 8 )]
visible = false

[node name="TextureRect2" type="TextureRect" parent="MissileLock"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Nametag" type="Node2D" parent="."]
scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="Nametag"]
modulate = Color( 0, 0.894118, 0.121569, 1 )
margin_left = -8.0
margin_top = -24.0
margin_right = 32.0
margin_bottom = -10.0
text = "P1"

[node name="NameShowTimer" type="Timer" parent="Nametag"]
wait_time = 3.0
autostart = true

[node name="Pointer" type="Node2D" parent="Nametag"]

[node name="TextureRect" type="Sprite" parent="Nametag/Pointer"]
position = Vector2( 100, 0 )
texture = ExtResource( 11 )
hframes = 2
vframes = 3
frame = 1

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 5000.0
bus = "SFX"

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
max_distance = 5000.0
bus = "SFX"

[node name="JetSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
pitch_scale = 0.1
autoplay = true
max_distance = 5000.0
bus = "SFX"

[node name="ShootyTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="MissileLockTimer" to="." method="_on_MissileLockTimer_timeout"]
[connection signal="timeout" from="Nametag/NameShowTimer" to="." method="_on_NameShowTimer_timeout"]
[connection signal="timeout" from="ShootyTimer" to="." method="_on_ShootyTimer_timeout"]
